Fix several styles Add correct fonts Fix blog spacing Add FontAwesome

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -200,14 +200,14 @@ a:hover { text-decoration: underline; }
 /* Blog */
 
 .blogRow {
-	width: 95%;
+	width: 90%;
 	margin-left: auto;
 	margin-right: auto;
 	max-width: initial;
 }
 
 #leftside-bio {
-	margin-top: 70px;
+	margin-top: 100px;
 	text-align: center;
 }
 
